セルの背景色変更

--- a/CodeStockApp/View/SpringView.storyboard
+++ b/CodeStockApp/View/SpringView.storyboard
@@ -28,10 +28,10 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.96921318769999998" green="0.82810233830000002" blue="0.91456442069999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Fei-5b-E9e" secondAttribute="bottom" id="0nb-qK-aaa"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Fei-5b-E9e" secondAttribute="trailing" id="6ua-eP-1s5"/>
-                            <constraint firstItem="Fei-5b-E9e" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="KGJ-hF-4rO"/>
-                            <constraint firstItem="Fei-5b-E9e" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="tDi-iZ-mrm"/>
+                            <constraint firstItem="Fei-5b-E9e" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="8kE-rF-pWN"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Fei-5b-E9e" secondAttribute="trailing" id="YE2-lE-caW"/>
+                            <constraint firstItem="Fei-5b-E9e" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="c44-Xo-ZzZ"/>
+                            <constraint firstItem="Fei-5b-E9e" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="tcu-FA-zPl"/>
                         </constraints>
                     </view>
                     <connections>
@@ -40,7 +40,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="-17"/>
+            <point key="canvasLocation" x="135.1145038167939" y="-17.605633802816904"/>
         </scene>
     </scenes>
     <resources>
