SummerViewのカスタムセル実装

--- a/CodeStockApp/View/SummerView.storyboard
+++ b/CodeStockApp/View/SummerView.storyboard
@@ -15,9 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="YH0-69-zSV">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="Vwe-BO-8NM"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="Uij-ME-Prl"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <constraints>
+                            <constraint firstItem="YH0-69-zSV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Rh2-nT-b0m"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="YH0-69-zSV" secondAttribute="bottom" id="cRf-DT-vH1"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="YH0-69-zSV" secondAttribute="trailing" id="fPU-YC-MeN"/>
+                            <constraint firstItem="YH0-69-zSV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="yEY-gE-gej"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="YH0-69-zSV" id="Uvi-05-rzz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +44,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
