--- a/CodeStockApp/View/FallView.storyboard
+++ b/CodeStockApp/View/FallView.storyboard
@@ -15,9 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NgH-Tt-XkW">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="SMC-Il-XAI"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="KJR-fK-HTK"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <constraints>
+                            <constraint firstItem="NgH-Tt-XkW" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="IyX-cP-fa2"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="NgH-Tt-XkW" secondAttribute="bottom" id="SDH-6z-ab1"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="NgH-Tt-XkW" secondAttribute="trailing" id="q3r-L9-2Sj"/>
+                            <constraint firstItem="NgH-Tt-XkW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="zEj-HW-FkM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="NgH-Tt-XkW" id="xyb-1g-Y8z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +44,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBrownColor">
             <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
