WinterView,OwnSpringViewのカスタムセル実装

--- a/CodeStockApp/View/WinterView.storyboard
+++ b/CodeStockApp/View/WinterView.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,13 +15,37 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="djx-vZ-tYv">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="AxG-CW-jFh"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="K8N-Y8-IYo"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.84287217117756108" green="0.95524658233822979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="djx-vZ-tYv" secondAttribute="trailing" id="Ibc-SD-uEI"/>
+                            <constraint firstItem="djx-vZ-tYv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="SiF-ha-jR4"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="djx-vZ-tYv" secondAttribute="bottom" id="hVH-Aw-KIH"/>
+                            <constraint firstItem="djx-vZ-tYv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="pS2-4V-hHk"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="djx-vZ-tYv" id="sPH-VM-LXx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="138" y="-17"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
