--- a/CodeStockApp/View/OwnSummerView.storyboard
+++ b/CodeStockApp/View/OwnSummerView.storyboard
@@ -15,9 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bNc-lz-hno">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="JAZ-w4-rs1"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="cm8-3H-VnF"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <constraints>
+                            <constraint firstItem="bNc-lz-hno" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="1fb-S4-kSn"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bNc-lz-hno" secondAttribute="bottom" id="Cb4-af-HIT"/>
+                            <constraint firstItem="bNc-lz-hno" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l53-74-1EH"/>
+                            <constraint firstItem="bNc-lz-hno" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="ory-5g-HXU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="bNc-lz-hno" id="nkY-jt-VEe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +44,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
