OwnFallViewのカスタムセル実装

--- a/CodeStockApp/View/OwnFallView.storyboard
+++ b/CodeStockApp/View/OwnFallView.storyboard
@@ -15,9 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yIS-dj-dkG">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="gp4-4F-MpM"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="9hn-zo-2fi"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yIS-dj-dkG" secondAttribute="trailing" id="UBH-Jd-q2w"/>
+                            <constraint firstItem="yIS-dj-dkG" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="lHi-zZ-Up1"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="yIS-dj-dkG" secondAttribute="bottom" id="oMd-XS-9DR"/>
+                            <constraint firstItem="yIS-dj-dkG" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="qxv-v5-E6o"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="yIS-dj-dkG" id="eXC-B7-P9O"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +44,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBrownColor">
             <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
